		Adding a MemoryMappedComponent base class, which all memory-
		mapped components should inherit. (The canonical example is
		the RAMComponent class.)
		The mainbus can now forward reads and writes to memory-mapped
		child components.
20080401	Continuing on the mainbus (writing unit tests).
		Reintroduce the 'bool' state variable type.
		Adding a 'writeProtected' state bool for the RAMComponent, to
		emulate ROM behavior in a simple way.
20080402	Creating a src/include/thirdparty directory. Moving debug_new.h
		etc there. Also importing exec_elf.h from NetBSD [HEAD], and
		updating doc/RELEASE.html to reflect the location of thirdparty
		imports.
		Implementing the initial framework for I18N/localization. The
		first translation is Swedish. :-)
20080404	Making it possible to build with GTKMM 2.15.5 with --debug;
		note, however, that this produces memory leak warnings, so
		the GTKMM with --debug combination is not very useful yet.
		Implementing basic support for updating the UI when some things
		change: Undo/Redo-applicability, the name of the emulation, and
		the RunState. (As UI::UpdateUI().)
		Removing all old CVS $Id$ tags; they are not useful anymore.
		The GTKMM GUI EmulationDesignArea now shows some dummy circles
		(one for each component in the emulation setup).
20080405	Beginning on a FileLoader class, for loading binaries (e.g.
		ELFs). Also adding a test/ directory, where small test files
		used for unit tests may be stored. ELF program segments are
		loaded, but no additional information yet (entry point etc.).
		Catching std::exception at the outermost level, in order to
		print a reasonable message if the application crashes.
		Instead of loading binaries into an AddressDataBus, they are
		now loaded into a Component, which, if it has a "pc" state
		variable, is set to the entry point. Starting gxemul with
		-E testmips test/FileLoader_ELF_MIPS actually attempts to
		start running the binary now :-)