@@ -100,9 +100,18 @@ Misc.
 		[ ]  Unit tests for the above!
 
 	[/]  Make some initial things in the GUI work:
-		[ ]  A window for the text console, including Input line!
+		[/]  A window for the text console, including Input line!
+			[ ]  Scaling/position of the input line vs text window
+			[X]  Show text in the text window
+			[X]  Scrollbar on text window
+			[ ]  Fixed-width font in both the text window and input
+			     line.
+			[ ]  Accept keypresses in the input line :)
+				and handle commands...
 		[X]  Undo/redo status update when necessary
 		[/]  Workspace = show current emulation setup.
+		     [ ]  Correct Invalidation.
+		     [ ]  White background!
 		     [ ]  Draw meaningful graphics.
 		     [ ]  Draw text labels for Components.
 		[ ]  Palette on the right-hand side of available components.
